tests/NormalTests/paczka1/small_fuzzy/64788569.err
Error in line 11: 63Kp5Vf57 A97 10,7
Error in line 14: VeWDlf A867 182,35
